# VirbiusLLM

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  docker-compose.poc.yml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
config/logrotate/: virbius-poc.conf
db/: README.md
docs/: DESIGN.md  GLOSSARY.md  POC-REPO.md  POC-SEED-API.md  README.md  RELEASING.md  repo-layout.md  seed-api.md  user-guide.en.md  user-guide.md
docs/openspec/: MVP-OPENSPEC.md  README.md  bind-scope.md  cumulative-counter.md  engine-admin.openapi.yaml  evaluate.proto  gateway-agent.openapi.yaml  gateway-artifact-redis.md  groovy-l3-contract.md  list-and-cumulative-rules.md  list-match.md  openresty-gateway.md  prompt-llm.md  registry.openapi.yaml  rule-authoring.md  rule-hit-merge.md  rule-level-enforce.md  rule-rollout.md  scene-registry.md  script-rules.md  value-resolution.md
docs/openspec/schemas/: audit-event.schema.json  control-context.schema.json  edge-manifest.schema.json  rule-bundle.schema.json
examples/: poc-default-bundle.yaml
examples/gateway/openresty-poc/0.1.0/: README.md  nginx.conf.template
examples/gateway/poc-default/0.1.0/: README.md  apisix-global-rules.json  apisix-routes-general_chat.json  apisix-routes-medical_qa.json  apisix-service-default.json  kong-routes-general_chat.yaml  kong-services-default.yaml
integrations/openclaw/: README.md  openclaw-virbius.batch.json
scripts/: backfill-audit-from-redis.sh  build-openresty-local.sh  compile-openresty-poc.sh  configure-openclaw-virbius.sh  dev-up.sh  init-databases.sh  install-logrotate.sh  openresty-env.local.example  run-local.sh  smoke-test.sh  start-openresty-poc.sh
virbius-compiler/: README.md  dependency-reduced-pom.xml  pom.xml
virbius-control/: README.md  pom.xml
virbius-control/src/main/resources/: application-dev.yml  application-prod.yml  application-staging.yml  application.yml  logback-spring.xml
virbius-core/: Cargo.toml  README.md  README.zh.md
virbius-core/db/: schema.sql
virbius-core/examples/: gateway_http_client.rs  rust_client_demo.rs
virbius-core/examples/fixtures/: demo-edge-manifest.json
virbius-core/include/: virbius.h
virbius-core/src/: audit.rs  bootstrap.rs  enforce.rs  engine.rs  lib.rs  lists.rs  manifest.rs  matcher.rs  runtime.rs  sync.rs  trace.rs  upload.rs
virbius-core/src/api/: context.rs  error.rs  mod.rs  result.rs
virbius-core/src/dlp/: engine.rs  entity.rs  mod.rs  vault.rs
virbius-engine/: README.md  pom.xml
virbius-engine/src/main/proto/: evaluate.proto
virbius-gateway/: README.md
virbius-gateway-agent/: Cargo.toml  README.md
virbius-gateway-agent/db/: schema.sql
virbius-gateway-agent/src/: access_lists.rs  audit.rs  bind_scope.rs  cumulative.rs  deploy.rs  enforce.rs  engine.rs  list_redis.rs  logging.rs  main.rs  policy_engine.rs  script.rs  trace.rs
virbius-gateway-agent/testdata/: gateway-access-lists.json
virbius-gateway/core/: README.md
virbius-gateway/lib/: README.md  access_lists.lua  config_redis.lua  context_vars.lua  effective.lua  file_cache.lua  json_util.lua  list_redis.lua  prompt.lua  scene_registry.lua  trace.lua  uri_match.lua
virbius-gateway/plugins/apisix/: virbius-guard.lua
virbius-gateway/plugins/openresty/: access.lua
virbius-groovy-l3/: pom.xml
virbius-policy/: pom.xml
(+382 files in other folders)
