[package]
name = "virbius-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = { version = "2", default-features = false, features = ["json"] }
