[package]
name = "virbius-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Virbius edge L0 SDK (Rust + C ABI): local scan, blacklist, DLP desensitization"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
crc32c = "0.6"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = { version = "2", default-features = false, features = ["json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[[example]]
name = "rust_client_demo"
path = "examples/rust_client_demo.rs"

[[example]]
name = "gateway_http_client"
path = "examples/gateway_http_client.rs"

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["json"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
