[package]
name = "virbius-gateway-agent"
version = "0.1.0"
edition = "2021"
description = "APISIX/Kong sidecar: HTTP → virbius-engine Evaluate"

[[bin]]
name = "virbius-gateway-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
crc32fast = "1"
redis = "0.27"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
flexi_logger = { version = "0.29", features = ["compress"] }
log = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }